--- a/apps/base/kafka-topics/topic-jobstart.yaml
+++ b/apps/base/kafka-topics/topic-jobstart.yaml
@@ -1,7 +1,7 @@
 apiVersion: kafka.strimzi.io/v1beta1
 kind: KafkaTopic
 metadata:
-  name: data
+  name: jobstart
   namespace: kafka
   labels:
     strimzi.io/cluster: kafka-cluster
