--- a/clusters/staging/sub-infrastructure.yaml
+++ b/clusters/staging/sub-infrastructure.yaml
@@ -1,21 +1,15 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
-  name: apps
+  name: sub-infrastructure
   namespace: flux-system
 spec:
   interval: 10m0s
   dependsOn:
     - name: infrastructure
-    - name: sub-infrastructure
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./apps/staging
+  path: ./sub-infrastructure
   prune: true
   validation: client
-  healthChecks:
-    - apiVersion: helm.toolkit.fluxcd.io/v1beta1
-      kind: HelmRelease
-      name: podinfo
-      namespace: podinfo
