fix incorrect strimzi chart name

--- a/infrastructure/kafka/release.yaml
+++ b/infrastructure/kafka/release.yaml
@@ -6,7 +6,7 @@ spec:
   releaseName: strimzi
   chart:
     spec:
-      chart: strimzi
+      chart: strimzi-kafka-operator
       sourceRef:
         kind: HelmRepository
         name: strimzi
