added in the kafka-streams apps

--- a/apps/staging/kustomization.yaml
+++ b/apps/staging/kustomization.yaml
@@ -4,5 +4,6 @@ namespace: podinfo
 resources:
   #- ../base/podinfo
   - ../base/kafka-topics
+  - ../base/kafka-streams
 # patchesStrategicMerge:
 #   - podinfo-values.yaml
