--- a/apps/base/kafka-streams/kustomization.yaml
+++ b/apps/base/kafka-streams/kustomization.yaml
@@ -2,9 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: kafka-streams
 resources:
-  - topic-data.yaml
-  - topic-fieldrules.yaml
-  - topic-filterdata.yaml
-  - topic-jobstart.yaml
-  - topic-outputdata.yaml
-  - topic-processeddata.yaml
+  - apply-filterrules-job.yaml
+  - apply-rules-job.yaml
+  - label-data-job.yaml
+  - namespace.yaml
