--- a/kafka-streams/staging/kustomization.yaml
+++ b/kafka-streams/staging/kustomization.yaml
@@ -2,7 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: kafka-streams
 resources:
-  - ../base/kafka-topics
-
+  - ../base/kafka-streams
 # patchesStrategicMerge:
 #   - podinfo-values.yaml
