--- a/apps/staging/kustomization.yaml
+++ b/apps/staging/kustomization.yaml
@@ -1,8 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: kafka-streams
 resources:
-  - ../base/kafka-topics
+  - ../base/kafka-streams
 
 # patchesStrategicMerge:
 #   - podinfo-values.yaml
