--- a/infrastructure/kafka/kustomization.yaml
+++ b/infrastructure/kafka/kustomization.yaml
@@ -4,6 +4,7 @@ namespace: kafka
 resources:
   - namespace.yaml
   - release.yaml
+  - registry.yaml
   - cluster.yaml
   - topic-data.yaml
   - topic-fieldrules.yaml
