--- a/apps/base/kafka-streams/label-data-job.yaml
+++ b/apps/base/kafka-streams/label-data-job.yaml
@@ -42,6 +42,8 @@ spec:
           value: jobstart
         - name: OUTPUT_TOPIC
           value: output
+        - name: AVRO_SCHEMA_REGISTRY_URL
+          value: http://registry.kafka
         resources:
           limits:
             cpu: 1000m
