--- a/apps/base/fakedata/kustomization.yaml
+++ b/apps/base/fakedata/kustomization.yaml
@@ -1,7 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: applications
+namespace: kafka-streams
 resources:
-  - namespace.yaml
   - release.yaml
   - service.yaml
