--- a/apps/base/kafka-streams/apply-filterrules-job.yaml
+++ b/apps/base/kafka-streams/apply-filterrules-job.yaml
@@ -43,7 +43,7 @@ spec:
         - name: OUTPUT_TOPIC
           value: processeddata
         - name: AVRO_SCHEMA_REGISTRY_URL
-          value: http://schema-registry.kafka
+          value: http://avro-schema-registry.kafka
         resources:
           limits:
             cpu: 1000m
