--- a/apps/base/kafka-streams/apply-rules-job.yaml
+++ b/apps/base/kafka-streams/apply-rules-job.yaml
@@ -45,7 +45,7 @@ spec:
         - name: SECONDARY_OUTPUT_TOPIC
           value: filterdata
         - name: AVRO_SCHEMA_REGISTRY_URL
-          value: http://schema-registry.kafka
+          value: http://avro-schema-registry.kafka
         resources:
           limits:
             cpu: 1000m
