--- a/infrastructure/kafka/confluent-registry.yaml
+++ b/infrastructure/kafka/confluent-registry.yaml
@@ -2,27 +2,27 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: schema-registry
-  name: schema-registry
+    app: avro-schema-registry
+  name: avro-schema-registry
   namespace: kafka
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: schema-registry
+      app: avro-schema-registry
   template:
     metadata:
       labels:
-        app: schema-registry
+        app: avro-schema-registry
     spec:
       containers:
         - image: confluentinc/cp-schema-registry:latest
-          name: schema-registry
+          name: avro-schema-registry
           env:
             - name: SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS
               value: kafka-cluster-kafka-bootstrap.kafka:9092
             - name: SCHEMA_REGISTRY_HOST_NAME
-              value: schema-registry
+              value: avro-schema-registry
             - name: SCHEMA_REGISTRY_LISTENERS
               value: http://0.0.0.0:8081              
           resources:
@@ -36,8 +36,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: schema-registry
-  name: schema-registry
+    app: avro-schema-registry
+  name: avro-schema-registry
   namespace: kafka
 spec:
   ports:
@@ -47,5 +47,5 @@ spec:
       targetPort: 8081
       nodePort: 30081
   selector:
-    app: schema-registry
+    app: avro-schema-registry
   type: NodePort
