--- a/infrastructure/sealedsecrets/release.yaml
+++ b/infrastructure/sealedsecrets/release.yaml
@@ -11,7 +11,7 @@ spec:
         kind: HelmRepository
         name: sealed-secrets
         namespace: flux-system
-      version: "1.14.1-r1"
+      version: "1.13.2"
   interval: 1h0m0s
   install:
     remediation:
