add iotedge round 1

--- a/apps/staging/kustomization.yaml
+++ b/apps/staging/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ../base/kafka-streams
   - ../base/fakedata
+  - ../base/iotedge
 
 # patchesStrategicMerge:
 #   - podinfo-values.yaml
