--- a/apps/base/iotedge/device.yaml
+++ b/apps/base/iotedge/device.yaml
@@ -2,6 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: edge1
+  namespace: iotedge
 spec:
   releaseName: edge1
   chart:
@@ -10,7 +11,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: microsoft-iotedge
-        namespace: iotedge
+        namespace: flux-system
       version: "0.2.11"
   interval: 1h0m0s
   install:
