--- a/infrastructure/iotedge/release.yaml
+++ b/infrastructure/iotedge/release.yaml
@@ -10,7 +10,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: microsoft-iotedge
-        namespace: iotedge
+        namespace: flux-system
       version: "0.2.11"
   interval: 1h0m0s
   install:
