added nodeaffinity to persistentvolumes

--- a/infrastructure/kafka/persistent-volumes.yaml
+++ b/infrastructure/kafka/persistent-volumes.yaml
@@ -11,6 +11,14 @@ spec:
   storageClassName: local-storage
   local:
     path: /data/volumes/pv1
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - ubuntu-office
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -25,6 +33,14 @@ spec:
   storageClassName: local-storage
   local:
     path: /data/volumes/pv2
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - ubuntu-office
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -39,6 +55,14 @@ spec:
   storageClassName: local-storage
   local:
     path: /data/volumes/pv3
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - ubuntu-office
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -53,6 +77,14 @@ spec:
   storageClassName: local-storage
   local:
     path: /data/volumes/pv4
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - ubuntu-office
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -67,6 +99,14 @@ spec:
   storageClassName: local-storage
   local:
     path: /data/volumes/pv5
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - ubuntu-office
 ---
 apiVersion: v1
 kind: PersistentVolume
@@ -81,3 +121,11 @@ spec:
   storageClassName: local-storage
   local:
     path: /data/volumes/pv6
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - ubuntu-office
